# app/api/output.go
@@ -35,15 +35,15 @@ func NewOutputController(provider db.Provider) *OutputController {
 	}
 }
 
-// @Summary Get all states
-// @Description Get all states
-// @Tags states
-// @Produce json
-// @Success 200 {array} models.State
-// @Failure 401 {object} error.ApiError
-// @Failure 403 {object} error.ApiError
-// @Failure 500 {object} error.ApiError
-// @Router /states [get]
+//	@Summary		Get all states
+//	@Description	Get all states
+//	@Tags			states
+//	@Produce		json
+//	@Success		200	{array}		models.State
+//	@Failure		401	{object}	error.ApiError
+//	@Failure		403	{object}	error.ApiError
+//	@Failure		500	{object}	error.ApiError
+//	@Router			/states [get]
 func (c *OutputController) States(ctx echo.Context) error {
 	res, err := c.stateDao.GetAll()
 	if err != nil {
@@ -52,15 +52,15 @@ func (c *OutputController) States(ctx echo.Context) error {
 	return c.Yeet(ctx, res)
 }
 
-// @Summary Get all curriculum types
-// @Description Get all curriculum types
-// @Tags curriculumtypes
-// @Produce json
-// @Success 200 {array} models.Curriculumtype
-// @Failure 401 {object} error.ApiError
-// @Failure 403 {object} error.ApiError
-// @Failure 500 {object} error.ApiError
-// @Router /curriculumtypes [get]
+//	@Summary		Get all curriculum types
+//	@Description	Get all curriculum types
+//	@Tags			curriculumtypes
+//	@Produce		json
+//	@Success		200	{array}		models.Curriculumtype
+//	@Failure		401	{object}	error.ApiError
+//	@Failure		403	{object}	error.ApiError
+//	@Failure		500	{object}	error.ApiError
+//	@Router			/curriculumtypes [get]
 func (c *OutputController) Curriculumtypes(ctx echo.Context) error {
 	res, err := c.curriculumytypeDao.GetAll()
 	if err != nil {
@@ -69,15 +69,15 @@ func (c *OutputController) Curriculumtypes(ctx echo.Context) error {
 	return c.Yeet(ctx, res)
 }
 
-// @Summary Get all grade types
-// @Description Get all grade types
-// @Tags gradetypes
-// @Produce json
-// @Success 200 {array} models.Gradetype
-// @Failure 401 {object} error.ApiError
-// @Failure 403 {object} error.ApiError
-// @Failure 500 {object} error.ApiError
-// @Router /gradetypes [get]
+//	@Summary		Get all grade types
+//	@Description	Get all grade types
+//	@Tags			gradetypes
+//	@Produce		json
+//	@Success		200	{array}		models.Gradetype
+//	@Failure		401	{object}	error.ApiError
+//	@Failure		403	{object}	error.ApiError
+//	@Failure		500	{object}	error.ApiError
+//	@Router			/gradetypes [get]
 func (c *OutputController) Gradetypes(ctx echo.Context) error {
 	res, err := c.gradetypeDao.GetAll()
 	if err != nil {
@@ -86,15 +86,15 @@ func (c *OutputController) Gradetypes(ctx echo.Context) error {
 	return c.Yeet(ctx, res)
 }
 
-// @Summary Get all evaluation types
-// @Description Get all evaluation types
-// @Tags evaluationtypes
-// @Produce json
-// @Success 200 {array} models.Evaluationtype
-// @Failure 401 {object} error.ApiError
-// @Failure 403 {object} error.ApiError
-// @Failure 500 {object} error.ApiError
-// @Router /evaluationtypes [get]
+//	@Summary		Get all evaluation types
+//	@Description	Get all evaluation types
+//	@Tags			evaluationtypes
+//	@Produce		json
+//	@Success		200	{array}		models.Evaluationtype
+//	@Failure		401	{object}	error.ApiError
+//	@Failure		403	{object}	error.ApiError
+//	@Failure		500	{object}	error.ApiError
+//	@Router			/evaluationtypes [get]
 func (c *OutputController) Evaluationtypes(ctx echo.Context) error {
 	res, err := c.evaluationtypeDao.GetAll()
 	if err != nil {
@@ -103,15 +103,15 @@ func (c *OutputController) Evaluationtypes(ctx echo.Context) error {
 	return c.Yeet(ctx, res)
 }
 
-// @Summary Get all fields
-// @Description Get all fields
-// @Tags fields
-// @Produce json
-// @Success 200 {array} models.Field
-// @Failure 401 {object} error.ApiError
-// @Failure 403 {object} error.ApiError
-// @Failure 500 {object} error.ApiError
-// @Router /fields [get]
+//	@Summary		Get all fields
+//	@Description	Get all fields
+//	@Tags			fields
+//	@Produce		json
+//	@Success		200	{array}		models.Field
+//	@Failure		401	{object}	error.ApiError
+//	@Failure		403	{object}	error.ApiError
+//	@Failure		500	{object}	error.ApiError
+//	@Router			/fields [get]
 func (c *OutputController) Fields(ctx echo.Context) error {
 	res, err := c.fieldDao.GetAll()
 	if err != nil {
@@ -120,15 +120,15 @@ func (c *OutputController) Fields(ctx echo.Context) error {
 	return c.Yeet(ctx, res)
 }
 
-// @Summary Get all focuses
-// @Description Get all focuses
-// @Tags focuses
-// @Produce json
-// @Success 200 {array} models.Focus
-// @Failure 401 {object} error.ApiError
-// @Failure 403 {object} error.ApiError
-// @Failure 500 {object} error.ApiError
-// @Router /focuses [get]
+//	@Summary		Get all focuses
+//	@Description	Get all focuses
+//	@Tags			focuses
+//	@Produce		json
+//	@Success		200	{array}		models.Focus
+//	@Failure		401	{object}	error.ApiError
+//	@Failure		403	{object}	error.ApiError
+//	@Failure		500	{object}	error.ApiError
+//	@Router			/focuses [get]
 func (c *OutputController) Focuses(ctx echo.Context) error {
 	res, err := c.focusDao.GetAll()
 	if err != nil {
@@ -137,15 +137,15 @@ func (c *OutputController) Focuses(ctx echo.Context) error {
 	return c.Yeet(ctx, res)
 }
 
-// @Summary Get all exam types
-// @Description Get all exam types
-// @Tags examtypes
-// @Produce json
-// @Success 200 {array} models.Examtype
-// @Failure 401 {object} error.ApiError
-// @Failure 403 {object} error.ApiError
-// @Failure 500 {object} error.ApiError
-// @Router /examtypes [get]
+//	@Summary		Get all exam types
+//	@Description	Get all exam types
+//	@Tags			examtypes
+//	@Produce		json
+//	@Success		200	{array}		models.Examtype
+//	@Failure		401	{object}	error.ApiError
+//	@Failure		403	{object}	error.ApiError
+//	@Failure		500	{object}	error.ApiError
+//	@Router			/examtypes [get]
 func (c *OutputController) Examtypes(ctx echo.Context) error {
 	res, err := c.examtypeDao.GetAll()
 	if err != nil {
